--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Assigment</string>
+    <string-array name="Oparition">
+        <item>*</item>
+        <item>+</item>
+        <item>-</item>
+        <item>/</item>
+    </string-array>
+
 </resources>
